# Logalizer-UI

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake.yml  cpp.yml
src/: CMakeLists.txt  MainFrameImpl.cpp  MainFrameImpl.h  main.cpp
src/ui/: Generate.fbp  ui.cpp  ui.h
